--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,13 +9,54 @@
     android:padding="30dp"
     tools:context=".Home">
 
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:textColorHint="@color/colorAccent"
+        android:layout_marginTop="5sp"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/newadhar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Aadhar no."
+            android:inputType="text"
+            android:textSize="20sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <Button
+        android:id="@+id/showqr"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/button"
+        android:text="Show QR"
+        android:onClick="GenQr"
+        android:textColor="#ffffff"
+        android:textSize="22sp" />
+
+    <ImageView
+        android:id="@+id/code"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="20sp"
+        android:contentDescription="@string/todo" />
+
     <Button
         android:id="@+id/logout"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/button"
-        android:text="Log Out"
+        android:text="@string/log_out"
         android:textColor="#ffffff"
         android:textSize="22sp" />
 
